--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ numpy==1.19.2
 voila==0.2.2
 matplotlib==3.3.2
 ipywidgets==7.5.1
+bqplot==0.12.17
+scipy==1.5.2
+voila==0.1.23
+pandas==1.1.1
+pyyaml
